# Prometheus_Django

./: .env.sample  .gitignore  Dockerfile.redis  README.md  docker-compose.yml  redis.env.sample
django_app/: .env.sample  Dockerfile  pyproject.toml
django_app/app/app/: healthcheck.py  settings.py  urls.py  views.py
infrastructure/grafana/: .env.sample  provisioning.yml
infrastructure/grafana/dashboards/: django.json  redis.json
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: prometheus.yml  web.yml
infrastructure/redis/: .env.sample  redis-entrypoint.sh  redis.conf
infrastructure/redis-exporter/: .env.sample
utils/: password_generator.py
